styles.css
body {
  margin:0;
  font-family: Raleway;
  background-color: #f3ebd2;
}

header{
  margin:0;
  background-color: #cdd6f2;
  height: 100px;
  border-bottom: 1px solid #cccccc;
  padding: 2% 0 5% 0 ;
}

.test-grid {
  grid-template-columns: 2fr 1fr;
  display: grid;
  grid-column-gap: 3%;
  margin: 5% 2% 5% 2%;
  min-height: 550px;
}

.test-deck-selection {
  margin: 0 0 0 5%;
}

.test-box {
  background: #fb9b8f;
  border-radius: 30px;
  color: #ffffff;
  min-height: 100%;
  box-shadow: 5px 5px 5px grey;
}

.score-card{
  background: #c4aae3;
  border-radius: 30px;
  color: #ffffff;
  min-height: 45%;
  box-shadow: 5px 5px 5px grey;
  padding: 5%;
  margin: 0 0 2.5% 0;
}

.timer {
  background: yellow;
  border-radius: 30px;
  height: 25%;
  margin: 0 0 5% 0;
  padding: 3%;
  box-shadow: 5px 5px 5px grey;
}

.time.btn {
  border-radius: 40px;
}

.timer-buttons {
  border-radius: 20px;
  border: 1px solid #ffffff;
  background: #e5e500;
  text-align: center;
  width: 60%;
  padding: 1%;
  margin-left: 20%;
}

.stat-grid {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 3%;
}

.details {
  background: #6666ff;
  border-radius: 30px;
  height: 30em;
  box-shadow: 5px 5px 5px grey;
  margin: 0 5% 0 0;
  overflow: scroll;
  padding: 0 5% 0 5%;
}

.stats {
  background: #8faa87;
  border-radius: 30px;
  height: 30em;
  box-shadow: 5px 5px 5px grey;
  margin: 0 0 0 2.5%;
  overflow: scroll;
  padding: 0 5% 0 5%;
}

.stat-list {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 2%;
  grid-row-gap: 3%;
}

.stat {
  border-radius: 10px;
  border: 1px solid white;
  background: #ffdb99;
  text-align: center;
  transition: 0.3s;
}

.stat:hover {
  cursor: pointer;
  background: #ffc04c;
}

.stat-date {
  background: #323232;
  color: white;
  padding: 2%;
  margin: 0 20% 0 20%;
  border-radius: 15px;
  margin-top: 3%;
}

.stat-score {
  color: red;
}

.stat-duration {
  color: blue;
}

footer {
  height: 60px;
  margin: 5% 0 0 0;
  background: #cdd6f2;
  padding: 1%;
  border-top: 1px solid #cccccc;
  color: grey;
  bottom: 0;
}

.grid-container {
  display: grid;
  grid-template-columns: 0.5fr 1fr 0.65fr;
  grid-column-gap: 5%;
  margin: 5% 2% 5% 2%;
}

#grid-col-1,
#grid-col-2,
#grid-col-3, {
  margin:10px;
  padding: 1em;
}

h1 {
  margin: 0 20% 0 22%;
  text-align: center;
  font-family: Train One;
  font-size: 6em;
  display: block;
  color: #ffff99;
  padding: 0;
}

h2 {
  margin: 5% 10% 5% 10%;
  padding: 2%;
  border-radius: 20px;
  box-shadow: 5px 5px 5px inset #808080;
  text-align: center;
  font-family: Dela Gothic One;
  letter-spacing: 3px;
  background: lightgrey;
  color: #595959;
}

h3 {
  text-align: center;
  margin:0;
  font-family: Chango;
}

#deck-list li {
  list-style: none;
  transition: 0.3s;
}

.new-form {
  margin-left: 40px;
  padding: 1em;
}

#deck-container,
#card-container {
  height: 50vh;
  border-radius: 30px;
  box-shadow: 5px 5px 5px grey;
  overflow: scroll;
}

#new-form-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.edit-deck-form,
.edit-card-form {
  min-height: 275px;
  border-radius: 25px;
  background-color: #ffd27f;
  color: white;
  margin-bottom: 5px;
  padding: 30px;
  border: 1px solid #e0e0e0;
  box-shadow: 5px 5px 5px grey;
}

.edit-deck-form h3,
.edit-card-form h3 {
  padding: 20px;
  letter-spacing: 3px;
}

.edit-deck-form button {
  margin: 10px;
}

#deck-container {
  background-color: #8c8c8c;
  color: white;
  padding: 5px;
}

#card-container {
  background-color: #d9c1b8;
  color: white;
  padding: 10px;
  box-shadow:
}

#new-form-container {
  background-color: #d1d9b8;
  color: white;
}

.btn,
.edit-deck-button,
.edit-card-button,
.delete-deck-button,
.delete-card-button {
  border-radius: 8px;
  margin: 5px;
  border-style: none;
  padding: 7px;
  font-family: Raleway;
  outline: none;
  transition: 0.2s;
  box-shadow: 3px 3px 5px grey;
}

.btn:hover,
.edit-deck-button:hover,
.edit-card-button:hover,
.delete-deck-button:hover,
.delete-card-button:hover {
  background: pink;
  cursor: pointer;
}

.start {
  margin: 10% 0 0 45%;
}

input, textarea {
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  padding: 5px;
  font-family: Raleway;
}

textarea {
  width: 90%;
  height: 5em;
}

.card-question {
  color: black;
  transition: 0.3s;
}

.card-question:hover,
#deck-list li:hover {
  font-weight: bolder;
  color: #ffff7f;
  cursor: pointer;
}

.card-answer {
  color: #7f0000;
  padding-right: 10px;
  line-height: 1.6em;
  font-size: 0.9em;
}

#card-list-header {
  color: #323232;
  font-size: 2em;
  font-weight: bolder;
}

select {
  font-family: Raleway;
  border-radius: 10px;
  border: 1px solid #ccc;
  padding: 5px;
  outline:none
}

select:focus {
  outline:none
}

select:hover {
  cursor: pointer;
}

.test-box h3 {
  font-size: 2em;
  color: black;
}

.scene {
  height: 50%;
  width: 50%;
  perspective: 600px;
  margin: 0 25% 0 25%;
}

.test-card {
  width: 100%;
  height: 100%;
  position: relative;
  transform-style: preserve-3d;
  transition: transform 0.2s;
}

.face {
  position: absolute;
  height: 100%;
  width: 100%;
  backface-visibility: hidden;
  border-radius: 20px;
  border: 5px solid #ffffff;
  overflow: scroll;
  padding: 2%;
  box-shadow: 8px 8px 10px black;
}

.card-front {
  background: purple;
}

.card-back {
  background: blue;
  transform: rotateY( 180deg );
}

.test-card.is-flipped {
  transform: rotateY(180deg);
  transition: transform 0.7s;
}

.face h3 {
  color: white;
  font-size: 1.5em;
  text-align: center;
  padding: 1%;
  border-radius: 10px;
}

.face p {
  color: white;
  font-size: 1.3em;
  margin: 5% 10% 0 10%;
  padding: 1%;
  text-align: center;
  line-height: 1.5em;
}

.start-test.btn,
.cancel-test.btn {
  background: #b2d8b2;
  transition: 0.3s;
}

.start-test.btn:hover,
.cancel-test.btn:hover {
  background: pink;
}

.test-buttons {
  margin: 8% 0 0 45%;
}

.right {
  background: green;
  color: white;
  padding: 2%;
  font-size: 1.1em;
  margin: 0 5% 0 0;
}

.wrong {
  background: red;
  color: white;
  padding: 2%;
  font-size: 1.1em;
  margin: 0 0 0 5%;
}

.test-card.hidden {
  display: none;
}

.answers {
  background: #191919;
  border-radius: 10px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 5%;
  margin: 0 0 2% 20%;
  width: 50%;
  text-align: center;
  font-size: 1.2em;
}

.score, .percentage {
  padding: 0;
  margin: 0;
}

.correct {
  color: green;
}

.incorrect {
  color: red;
}

.answers.final-score {
  background: #ffffb2;
  border: 3px solid grey;
  color: black;
}

